--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,31 @@
+/*
+#FFB400 - yellow
+#FBFBFB - White
+#2994B2 - teal
+#474744 - grey
+*/
+
+body {
+  background-color: #FBFBFB;
+}
+
+
+.nav {
+  background-color: #2994B2;
+  padding: 15px;
+  text-align: center;
+}
+
+.nav li {
+  list-style-type: none;
+  color: #FBFBFB;
+  margin: 0px;
+  padding: 30px;
+  display: inline;
+
+}
+
 li.selected {
   text-decoration: underline;
+  color: #FFB400;
 }
